src/tests/errors/lexer/009.ura
// errors/lexer/009 — `link` with unclosed quote
link "header.h

main():
    output("hi\n")
